# cmd/docs/swagger.json
@@ -5,12 +5,11 @@
         "title": "GO API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "Jose Guzman",
             "email": "joseguzmandev@gmail.com"
         },
         "version": "3.0"
     },
-    "host": "192.168.1.149:8080",
+    "host": "localhost:8080",
     "basePath": "/",
     "paths": {
         "/auth/change-password": {
@@ -256,6 +255,43 @@
                 "responses": {
                     "200": {
                         "description": "Return message",
+                        "schema": {
+                            "$ref": "#/definitions/domain.APIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Unhandled error (report it)",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error (report it)",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/mail/test": {
+            "post": {
+                "security": [
+                    {
+                        "none": []
+                    }
+                ],
+                "description": "This endpoint send a test email",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Mail"
+                ],
+                "summary": "Test email sending",
+                "responses": {
+                    "200": {
+                        "description": "Operation information",
                         "schema": {
                             "$ref": "#/definitions/domain.APIResponse"
                         }
