# internal/adapters/handler/mail.go
@@ -8,6 +8,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Test email sending
+// @Description This endpoint send a test email
+// @tags Mail
+// @Produce json
+// @Security none
+// @Success 200 {object} domain.APIResponse "Operation information"
+// @Failure 400 {object} string "Unhandled error (report it)"
+// @Failure 500 {object} string "Server error (report it)"
+// @Router /mail/test [post]
 func TestEmail(c *gin.Context) {
 	mailOptions := &service.MailOptions{
 		To: []string{
